--- a/paper.bib
+++ b/paper.bib
@@ -4,7 +4,8 @@
 	organization = {The Sage~Development Team},
 	title = {{S}age {M}athematics {S}oftware ({V}ersion 9.4)},
 	year = {2021},
-	note         = "available from \url{\tt https://www.sagemath.org}}
+	note         = "https://www.sagemath.org"
+	}
 
 
 @manual{PARI2,
@@ -12,7 +13,7 @@
       title        = "{PARI/GP version \texttt{2.13.1}}",
       year         = 2021,
       address      = "Univ. Bordeaux",
-      note         = "available from \url{https://pari.math.u-bordeaux.fr/}"
+      note         = "https://pari.math.u-bordeaux.fr"
     }
 
 @article{behnel2011cython,
