--- a/paper.bib
+++ b/paper.bib
@@ -28,9 +28,9 @@
 }
 
 @unpublished{reductionalghilbert,
-	author = {Str\"{o}mberg, Fredrik},
+	author = {Strömberg, Fredrik},
 	note = {Under review by the Journal of Number Theory, Arxiv:submit/4045767},
-	title = {A reduction algorithm for Hilbert modular groups},
+	title = {A reduction algorithm for {H}ilbert modular groups},
 	year = {2021}}
 
 @article{MR4091535,
