updated reference to arxiv

--- a/paper.bib
+++ b/paper.bib
@@ -27,7 +27,7 @@
 
 @unpublished{reductionalghilbert,
 	author = "Strömberg, Fredrik",
-	note = "Under review by the Journal of Number Theory, Arxiv:submit/4045767",
+	note = "Under review by the Journal of Number Theory; Arxiv:2111.13274",
 	title = "A reduction algorithm for {H}ilbert modular groups",
 	year = 2021
 }
