Updated Examples by introducing an "introduction" with basic usage at top.

--- a/examples/ExamplesK1.ipynb
+++ b/examples/ExamplesK1.ipynb
@@ -22,6 +22,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introductory example of basic usage\n",
+    "Let's first demonstrate the reduction of a point $$z=(0.1+i,0.2+0.5i) \\in \\mathbb{H}^2$$ with respect to the fundamental domain of $K_1$."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -31,7 +39,50 @@
     "from hilbert_modgroup.all import HilbertModularGroup, HilbertPullback, UpperHalfPlaneProductElement\n",
     "H1 = HilbertModularGroup(5)\n",
     "K1 = H1.base_ring().number_field()\n",
-    "P1 = HilbertPullback(H1)\n",
+    "P1 = HilbertPullback(H1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = UpperHalfPlaneProductElement([0.1+I,0.2+0.5*I])\n",
+    "P1.reduce(z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then check that if we apply a random element of $H_1$ we get the same (up to numerical error) reduced point"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w = H1.random_element(-5,5).acton(z)\n",
+    "P1.reduce(z) - P1.reduce(w)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Details of the algorithm\n",
+    "We will now go through the inner workings of the algorithm and the construction of the relevant bounds in more detail. Note that the functions below will mainly be of interest to researchers who wants to verify or extend these algorithms or results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "K1.discriminant()"
    ]
   },
@@ -499,7 +550,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 9.4",
+   "display_name": "SageMath 9.5",
    "language": "sage",
    "name": "sagemath"
   },
@@ -513,7 +564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
