--- a/examples/ExamplesK2.ipynb
+++ b/examples/ExamplesK2.ipynb
@@ -26,6 +26,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introductory example of basic usage\n",
+    "Let's first demonstrate the reduction of a point $$z=(0.1+i,0.2+0.5i) \\in \\mathbb{H}^2$$ with respect to the fundamental domain of $K_2$."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -36,6 +44,42 @@
     "H2 = HilbertModularGroup(10)\n",
     "K2 = H2.base_ring().number_field()\n",
     "P2 = HilbertPullback(H2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = UpperHalfPlaneProductElement([0.1+I,0.2+0.5*I])\n",
+    "P2.reduce(z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then check that if we apply a random element of $H_2$ we get the same (up to numerical error) reduced point"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w = H2.random_element(-5,5).acton(z)\n",
+    "P2.reduce(z) - P2.reduce(w)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Details of the algorithm\n",
+    "We will now go through the inner workings of the algorithm and the construction of the relevant bounds in more detail.\n",
+    "Note that the functions below will mainly be of interest to researchers who wants to verify or extend these algorithms or results."
    ]
   },
   {
@@ -810,7 +854,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 9.4",
+   "display_name": "SageMath 9.5",
    "language": "sage",
    "name": "sagemath"
   },
@@ -824,7 +868,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
