--- a/examples/ExamplesK3.ipynb
+++ b/examples/ExamplesK3.ipynb
@@ -18,6 +18,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introductory example of basic usage\n",
+    "Let's first demonstrate the reduction of a point $$z=(0.1+i,0.2+0.5i, 0.3 + 0.25i) \\in \\mathbb{H}^3$$ with respect to the fundamental domain of $K_3$."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -28,7 +36,60 @@
     "x = ZZ['x'].gen()\n",
     "K3.<a> = NumberField(x^3-x^2-2*x+1)\n",
     "H3=HilbertModularGroup(K3)\n",
-    "P3=HilbertPullback(H3)\n",
+    "P3=HilbertPullback(H3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = UpperHalfPlaneProductElement([0.1+I,0.2+0.5*I, 0.3 + 0.25*I])\n",
+    "z1 = P3.reduce(z); z1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then check that if we apply a random element of $H_3$ we get the same (up to numerical error) reduced point"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "H3.random_element(-1,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w = H3.random_element(-1,1).acton(z)\n",
+    "P3.reduce(w) - z1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Details of the algorithm\n",
+    "We will now go through the inner workings of the algorithm and the construction of the relevant bounds in more detail.\n",
+    "Note that the functions below will mainly be of interest to researchers who wants to verify or extend these algorithms or results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(\"Class number=\",H3.ncusps())\n",
     "print(\"Discriminant=\",K3.discriminant())\n",
     "print(\"Fundamental units=\",P3.fundamental_units())"
@@ -429,7 +490,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 9.4",
+   "display_name": "SageMath 9.5",
    "language": "sage",
    "name": "sagemath"
   },
@@ -443,7 +504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
