Change the deprecated <Number Field>.ideal() to <Number Field>.fractional_ideal()

--- a/examples/ExamplesK1.ipynb
+++ b/examples/ExamplesK1.ipynb
@@ -240,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_polygon(p,K1.ideal(1).integral_basis(),action='show',**norm_args)"
+    "plot_polygon(p,K1.fractional_ideal(1).integral_basis(),action='show',**norm_args)"
    ]
   },
   {
@@ -256,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_polygon(p,K1.ideal(1).integral_basis(),action='save',filename='K1.z1.domain1.pgf',**norm_args)"
+    "plot_polygon(p,K1.fractional_ideal(1).integral_basis(),action='save',filename='K1.z1.domain1.pgf',**norm_args)"
    ]
   },
   {
@@ -461,7 +461,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "basis=K1.ideal(1).integral_basis(); basis"
+    "basis=K1.fractional_ideal(1).integral_basis(); basis"
    ]
   },
   {
@@ -490,7 +490,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_polygon(p1,K1.ideal(1).integral_basis(),action='save',filename='K1.z2.domain1.pgf',xmin=-3,xmax=3,ymin=-3,ymax=3,\n",
+    "plot_polygon(p1,K1.fractional_ideal(1).integral_basis(),action='save',filename='K1.z2.domain1.pgf',xmin=-3,xmax=3,ymin=-3,ymax=3,\n",
     "             ticks=[2,2],**norm_args)"
    ]
   },
@@ -550,7 +550,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 9.5",
+   "display_name": "SageMath 10.0",
    "language": "sage",
    "name": "sagemath"
   },
@@ -564,7 +564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
