--- a/examples/ExamplesK2.ipynb
+++ b/examples/ExamplesK2.ipynb
@@ -252,7 +252,7 @@
    "outputs": [],
    "source": [
     "p=P2._candidate_integers_sigma(z,domain='preimage',return_polyhedron=True)\n",
-    "plot_polygon(p,K2.ideal(1).integral_basis(),action='show',xmin=-5,xmax=5,ymin=-4.5,ymax=4.5,**norm_args)"
+    "plot_polygon(p,K2.fractional_ideal(1).integral_basis(),action='show',xmin=-5,xmax=5,ymin=-4.5,ymax=4.5,**norm_args)"
    ]
   },
   {
@@ -261,7 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_polygon(p,K2.ideal(1).integral_basis(),action='save',xmin=-5,xmax=5,ymin=-4.5,ymax=4.5,filename='K2.z1.domain1.pgf',**norm_args)"
+    "plot_polygon(p,K2.fractional_ideal(1).integral_basis(),action='save',xmin=-5,xmax=5,ymin=-4.5,ymax=4.5,filename='K2.z1.domain1.pgf',**norm_args)"
    ]
   },
   {
@@ -395,8 +395,8 @@
    "outputs": [],
    "source": [
     "p=P2._candidate_integers_sigma(z,domain='preimage',return_polyhedron=True)\n",
-    "norm_args = {'norm_bound':P2._bound_for_sigma_norm(z,dist=0.5)}\n",
-    "plot_polygon(p,K2.ideal(1).integral_basis(),action='show',**norm_args)"
+    "norm_args = {'norm_bound':P2._bound_for_sigma_norm(z,dist=0.5),'xmin':-35,'xmax':35}\n",
+    "plot_polygon(p,K2.fractional_ideal(1).integral_basis(),action='show',**norm_args)"
    ]
   },
   {
@@ -405,7 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_polygon(p,K2.ideal(1).integral_basis(),action='save',filename='K2.z2.domain1.pgf',**norm_args)"
+    "plot_polygon(p,K2.fractional_ideal(1).integral_basis(),action='save',filename='K2.z2.domain1.png',**norm_args)"
    ]
   },
   {
@@ -415,8 +415,9 @@
    "outputs": [],
    "source": [
     "p=P2._candidate_integers_sigma(z,domain='polytope',return_polyhedron=True)\n",
-    "norm_args = {'norm_bound':P2._bound_for_sigma_norm(z,dist=0.5),'curve_map':P2.basis_matrix_ideal().inverse(),'norm_plot_factor':1.5}\n",
-    "plot_polygon(p,[1,1],action='show',ymax=4,ymin=-4,**norm_args)"
+    "norm_args = {'norm_bound':P2._bound_for_sigma_norm(z,dist=0.5),'curve_map':P2.basis_matrix_ideal().inverse(),\n",
+    "             'norm_plot_factor':1.5,'ymin':-7,'ymax':7}\n",
+    "plot_polygon(p,[1,1],action='show',**norm_args)"
    ]
   },
   {
@@ -425,7 +426,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_polygon(p,[1,1],action='save',ymax=4,ymin=-4,filename='K2.z2.domain2.pgf',**norm_args)"
+    "plot_polygon(p,[1,1],action='save',filename='K2.z2.domain2.png',**norm_args)"
    ]
   },
   {
@@ -550,7 +551,7 @@
    "source": [
     "p=P2._candidate_integers_sigma(z,domain='preimage',return_polyhedron=True)\n",
     "norm_args = {'norm_bound':P2._bound_for_sigma_norm(z,dist=1.59731464318420)}\n",
-    "plot_polygon(p,K2.ideal(1).integral_basis(),action='show',ticks=[5,5],**norm_args)"
+    "plot_polygon(p,K2.fractional_ideal(1).integral_basis(),action='show',ticks=[5,5],**norm_args)"
    ]
   },
   {
@@ -559,7 +560,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_polygon(p,K2.ideal(1).integral_basis(),action='save',ticks=[5,5],filename='K2.z3.domain1.pgf',**norm_args)"
+    "plot_polygon(p,K2.fractional_ideal(1).integral_basis(),action='save',ticks=[5,5],filename='K2.z3.domain1.pgf',**norm_args)"
    ]
   },
   {
@@ -659,7 +660,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c.is_Gamma0_equivalent(H2.cusps()[0],K2.ideal(1)) # Not equivalent to infinity"
+    "c.is_Gamma0_equivalent(H2.cusps()[0],K2.fractional_ideal(1)) # Not equivalent to infinity"
    ]
   },
   {
@@ -668,7 +669,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c.is_Gamma0_equivalent(H2.cusps()[1],K2.ideal(1),True) #Is equivalent to the other cusp."
+    "c.is_Gamma0_equivalent(H2.cusps()[1],K2.fractional_ideal(1),True) #Is equivalent to the other cusp."
    ]
   },
   {
@@ -854,7 +855,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 9.5",
+   "display_name": "SageMath 10.0",
    "language": "sage",
    "name": "sagemath"
   },
@@ -868,7 +869,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
