--- a/examples/ExamplesK4.ipynb
+++ b/examples/ExamplesK4.ipynb
@@ -112,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "K4.ideal(1).basis()"
+    "K4.fractional_ideal(1).basis()"
    ]
   },
   {
@@ -230,7 +230,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 9.5",
+   "display_name": "SageMath 10.0",
    "language": "sage",
    "name": "sagemath"
   },
@@ -244,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
