feat: update imports to work with passagemath and added documentation and doctest to plot.py

--- a/examples/ExamplesK1.ipynb
+++ b/examples/ExamplesK1.ipynb
@@ -35,8 +35,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore', category=UserWarning) \n",
     "from plot import plot_polygon\n",
     "from hilbert_modgroup.all import HilbertModularGroup, HilbertPullback, UpperHalfPlaneProductElement\n",
+    "from sage.rings.imaginary_unit import I\n",
+    "from sage.rings.cc import CC\n",
+    "from sage.rings.infinity import Infinity\n",
+    "from sage.modular.cusps_nf import NFCusp\n",
     "H1 = HilbertModularGroup(5)\n",
     "K1 = H1.base_ring().number_field()\n",
     "P1 = HilbertPullback(H1)"
@@ -240,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_polygon(p,K1.fractional_ideal(1).integral_basis(),action='show',**norm_args)"
+    "plot_polygon(p,K1.fractional_ideal(1).integral_basis(),action='show',**norm_args).matplotlib()"
    ]
   },
   {
@@ -284,7 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_polygon(p1,[1,1],action='show',**norm_args)"
+    "plot_polygon(p1,[1,1],action='show',**norm_args).matplotlib()"
    ]
   },
   {
@@ -481,7 +488,7 @@
    "source": [
     "p1=P1._candidate_integers_sigma(z,domain='preimage',return_polyhedron=True,use_initial_bd_d=False)\n",
     "norm_args = {'norm_bound':P1._bound_for_sigma_norm(z)}\n",
-    "plot_polygon(p1,basis,action='show',ticks=[2,2],xmin=-3,xmax=3,ymin=-3,ymax=3,**norm_args)"
+    "plot_polygon(p1,basis,action='show',ticks=[2,2],xmin=-3,xmax=3,ymin=-3,ymax=3,**norm_args).matplotlib()"
    ]
   },
   {
@@ -503,7 +510,7 @@
     "p=P1._candidate_integers_sigma(z,domain='polytope',return_polyhedron=True,use_initial_bd_d=False)\n",
     "# Add arguments to include the norm bounds\n",
     "norm_args = {'norm_bound':P1._bound_for_sigma_norm(z,4),'curve_map':P1.basis_matrix_ideal().inverse()}\n",
-    "plot_polygon(p,[1,1],action='show',ticks=[2,2],xmax=4,xmin=-4,ymin=-4,ymax=4,**norm_args)"
+    "plot_polygon(p,[1,1],action='show',ticks=[2,2],xmax=4,xmin=-4,ymin=-4,ymax=4,**norm_args).matplotlib()"
    ]
   },
   {
