--- a/examples/ExamplesK2.ipynb
+++ b/examples/ExamplesK2.ipynb
@@ -35,12 +35,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
     "from plot import plot_polygon\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore', category=UserWarning) \n",
     "from hilbert_modgroup.all import HilbertModularGroup, HilbertPullback, UpperHalfPlaneProductElement\n",
+    "from sage.rings.imaginary_unit import I\n",
+    "from sage.rings.cc import CC\n",
+    "from sage.rings.infinity import Infinity\n",
     "H2 = HilbertModularGroup(10)\n",
     "K2 = H2.base_ring().number_field()\n",
     "P2 = HilbertPullback(H2)"
