feat: update examples and plotting functions to work with both Sagemath 10.5 and IPython kernel in the notebook.

--- a/examples/ExamplesK1.ipynb
+++ b/examples/ExamplesK1.ipynb
@@ -247,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_polygon(p,K1.fractional_ideal(1).integral_basis(),action='show',**norm_args).matplotlib()"
+    "plot_polygon(p,K1.fractional_ideal(1).integral_basis(),action='show',**norm_args)"
    ]
   },
   {
@@ -282,7 +282,7 @@
    "outputs": [],
    "source": [
     "# Add arguments to include the norm bounds\n",
-    "norm_args = {'norm_bound':P1._bound_for_sigma_norm(z),'curve_map':P1.basis_matrix_ideal().inverse()}"
+    "norm_args = {'norm_bound':P1._bound_for_sigma_norm(z),'curve_map':P1.basis_matrix_ideal().inverse(), 'ticks': [1,1]}"
    ]
   },
   {
@@ -291,7 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_polygon(p1,[1,1],action='show',**norm_args).matplotlib()"
+    "plot_polygon(p1,[1,1],action='show',**norm_args)"
    ]
   },
   {
@@ -488,7 +488,7 @@
    "source": [
     "p1=P1._candidate_integers_sigma(z,domain='preimage',return_polyhedron=True,use_initial_bd_d=False)\n",
     "norm_args = {'norm_bound':P1._bound_for_sigma_norm(z)}\n",
-    "plot_polygon(p1,basis,action='show',ticks=[2,2],xmin=-3,xmax=3,ymin=-3,ymax=3,**norm_args).matplotlib()"
+    "plot_polygon(p1,basis,action='show',ticks=[2,2],xmin=-3,xmax=3,ymin=-3,ymax=3,**norm_args)"
    ]
   },
   {
@@ -510,7 +510,7 @@
     "p=P1._candidate_integers_sigma(z,domain='polytope',return_polyhedron=True,use_initial_bd_d=False)\n",
     "# Add arguments to include the norm bounds\n",
     "norm_args = {'norm_bound':P1._bound_for_sigma_norm(z,4),'curve_map':P1.basis_matrix_ideal().inverse()}\n",
-    "plot_polygon(p,[1,1],action='show',ticks=[2,2],xmax=4,xmin=-4,ymin=-4,ymax=4,**norm_args).matplotlib()"
+    "plot_polygon(p,[1,1],action='show',ticks=[2,2],xmax=4,xmin=-4,ymin=-4,ymax=4,**norm_args)"
    ]
   },
   {
@@ -557,7 +557,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 10.0",
+   "display_name": "SageMath 10.5",
    "language": "sage",
    "name": "sagemath"
   },
@@ -571,9 +571,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
