--- a/examples/ExamplesK2.ipynb
+++ b/examples/ExamplesK2.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,6 +47,7 @@
     "from sage.rings.imaginary_unit import I\n",
     "from sage.rings.cc import CC\n",
     "from sage.rings.infinity import Infinity\n",
+    "from sage.modular.cusps_nf import NFCusp\n",
     "H2 = HilbertModularGroup(10)\n",
     "K2 = H2.base_ring().number_field()\n",
     "P2 = HilbertPullback(H2)"
@@ -75,7 +76,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "w = H2.random_element(-5,5).acton(z)\n",
+    "#w = H2.random_element(-5,5).acton(z) # might find an element that takes a long time to reduce\n",
+    "w = UpperHalfPlaneProductElement([5.91076221688848 + 0.215517241379310*I, -6.60396708504264 + 0.367647058823529*I])\n",
     "P2.reduce(z) - P2.reduce(w)"
    ]
   },
@@ -277,10 +279,7 @@
    "outputs": [],
    "source": [
     "p=P2._candidate_integers_sigma(z,domain='polytope',return_polyhedron=True)\n",
-    "print(p.vertices())\n",
-    "# Add arguments to include the norm bounds\n",
-    "norm_args = {'norm_bound':P2._bound_for_sigma_norm(z),'curve_map':P2.basis_matrix_ideal().inverse(),'norm_plot_factor':1.5}\n",
-    "plot_polygon(p,[1,1],action='show',ticks=[2,2],xmin=-4.75,xmax=4.75,ymin=-4.75,ymax=4.75,**norm_args)"
+    "print(p.vertices())"
    ]
   },
   {
@@ -289,7 +288,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_polygon(p,[1,1],action='save',ticks=[2,2],filename='K2.z1.domain2.pgf',xmin=-4.75,xmax=4.75,ymin=-4.75,ymax=4.75,**norm_args)"
+    "# Add arguments to include the norm bounds\n",
+    "norm_args = {'norm_bound':P2._bound_for_sigma_norm(z),'curve_map':P2.basis_matrix_ideal().inverse(),'norm_plot_factor':1.5}\n",
+    "plot_polygon(p,[1,1],action='show',ticks=[1,1],xmin=-4.75,xmax=4.75,ymin=-4.75,ymax=4.75,**norm_args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_polygon(p,[1,1],action='save',ticks=[1,1],filename='K2.z1.domain2.pgf',xmin=-4.75,xmax=4.75,ymin=-4.75,ymax=4.75,**norm_args)"
    ]
   },
   {
@@ -423,7 +433,7 @@
     "p=P2._candidate_integers_sigma(z,domain='polytope',return_polyhedron=True)\n",
     "norm_args = {'norm_bound':P2._bound_for_sigma_norm(z,dist=0.5),'curve_map':P2.basis_matrix_ideal().inverse(),\n",
     "             'norm_plot_factor':1.5,'ymin':-7,'ymax':7}\n",
-    "plot_polygon(p,[1,1],action='show',**norm_args)"
+    "plot_polygon(p,[1,1],ticks=[1,1],action='show',**norm_args)"
    ]
   },
   {
@@ -432,7 +442,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_polygon(p,[1,1],action='save',filename='K2.z2.domain2.png',**norm_args)"
+    "plot_polygon(p,[1,1],ticks=[1,1],action='save',filename='K2.z2.domain2.png',**norm_args)"
    ]
   },
   {
@@ -577,7 +587,7 @@
    "source": [
     "p=P2._candidate_integers_sigma(z,domain='polytope',return_polyhedron=True)\n",
     "norm_args = {'norm_bound':P2._bound_for_sigma_norm(z,1.59731464318420),'curve_map':P2.basis_matrix_ideal().inverse(),'norm_plot_factor':1.5}\n",
-    "plot_polygon(p,[1,1],action='show',ymax=5,ymin=-5,xmax=5,xmin=-5,**norm_args)"
+    "plot_polygon(p,[1,1],action='show',ticks=[1,1],ymax=5,ymin=-5,xmax=5,xmin=-5,**norm_args)"
    ]
   },
   {
@@ -586,7 +596,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_polygon(p,[1,1],action='save',ticks=[4,4],filename='K2.z3.domain2.pgf',ymax=5,ymin=-5,xmax=5,xmin=-5,**norm_args)"
+    "plot_polygon(p,[1,1],action='save',ticks=[1,1],filename='K2.z3.domain2.pgf',ymax=5,ymin=-5,xmax=5,xmin=-5,**norm_args)"
    ]
   },
   {
@@ -850,18 +860,11 @@
    "source": [
     "And hence the point w is indeed in the fundamental domain."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 10.0",
+   "display_name": "SageMath 10.5",
    "language": "sage",
    "name": "sagemath"
   },
@@ -875,7 +878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
