--- a/examples/ExamplesK4.ipynb
+++ b/examples/ExamplesK4.ipynb
@@ -18,10 +18,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore', category=UserWarning) \n",
     "from plot import plot_polygon\n",
     "from hilbert_modgroup.all import HilbertModularGroup, HilbertPullback, UpperHalfPlaneProductElement\n",
+    "from sage.rings.number_field.number_field import NumberField\n",
+    "from sage.rings.integer_ring import Z as ZZ\n",
+    "from sage.rings.infinity import Infinity\n",
+    "from sage.rings.imaginary_unit import I\n",
+    "from sage.rings.cc import CC\n",
     "x = ZZ['x'].gen()\n",
-    "K4.<a> = NumberField(x^3-36*x-1)\n",
+    "K4 = NumberField(x**3-36*x-1, names='a')\n",
+    "a = K4.gen()\n",
     "H4=HilbertModularGroup(K4)\n",
     "P4=HilbertPullback(H4)\n",
     "print(\"Class number=\",H4.ncusps())\n",
@@ -219,18 +227,11 @@
     "print(\"candidate cusps=\",candidate_cusps)\n",
     "print(\"Number of candidate cusps=\",len(candidate_cusps))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 10.0",
+   "display_name": "SageMath 10.5",
    "language": "sage",
    "name": "sagemath"
   },
@@ -244,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
