--- a/examples/ExamplesK3.ipynb
+++ b/examples/ExamplesK3.ipynb
@@ -31,10 +31,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore', category=UserWarning) \n",
+    "from sage.rings.number_field.number_field import NumberField\n",
+    "from sage.rings.integer_ring import Z as ZZ\n",
+    "from sage.rings.imaginary_unit import I\n",
+    "from sage.rings.cc import CC\n",
+    "from sage.rings.infinity import Infinity\n",
     "from hilbert_modgroup.all import HilbertModularGroup, HilbertPullback, UpperHalfPlaneProductElement\n",
     "from plot import plot_polygon\n",
     "x = ZZ['x'].gen()\n",
-    "K3.<a> = NumberField(x^3-x^2-2*x+1)\n",
+    "K3 = NumberField(x**3-x**2-2*x+1, names='a')\n",
+    "a = K3.gen()\n",
     "H3=HilbertModularGroup(K3)\n",
     "P3=HilbertPullback(H3)"
    ]
@@ -71,7 +79,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "w = H3.random_element(-1,1).acton(z)\n",
+    "# w = H3.random_element(-1,1).acton(z) % may result in a point that takes a long time...\n",
+    "w = UpperHalfPlaneProductElement([-3.62197290496952 + 0.966927617737994*I, -1.02358029786039 + 0.579577500415274*I, -11.7957996892154 + 0.134545067216425*I])\n",
     "P3.reduce(w) - z1"
    ]
   },
@@ -280,9 +289,7 @@
    "outputs": [],
    "source": [
     "p=P3._candidate_integers_sigma(z,domain='preimage',return_polyhedron=True)\n",
-    "norm_args = {'norm_bound':P3._bound_for_sigma_norm(z)}\n",
-    "plot_polygon(p,K3.ideal(1).integral_basis(),action='show',ticks=[1,1,1],polygon=False,inside_polygon=True,\n",
-    "             xmin=-2,xmax=2,ymin=-1.5,ymax=1.5,zmin=-1.6,zmax=1.67,**norm_args)"
+    "norm_args = {'norm_bound':P3._bound_for_sigma_norm(z), 'camera_position': (-2.3, -2, 2.0)}\n"
    ]
   },
   {
@@ -291,9 +298,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Viewpoint: [-0.0433,-0.5767,-0.8158],172.99]\n",
-    "# Saving directly as PNG does not really work unfortunately. It is better to save the above form the menu.\n",
-    "#plot_polygon(p,K3.ideal(1).integral_basis(),action='save',ticks=[2,3],polygon=False,filename='K3.z1.domain1.png')"
+    "plot_polygon(p,K3.ideal(1).integral_basis(),action='show',ticks=[1,1,1],polygon=False,inside_polygon=True,\n",
+    "             xmin=-2,xmax=2,**norm_args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saving directly as PNG does not result in a very nice image so it is better to save the above image from the menu.\n",
+    "#plot_polygon(p,K3.ideal(1).integral_basis(),action='save',ticks=[1,1,1],polygon=False,inside_polygon=True,\n",
+    "#             xmin=-2,xmax=2,**norm_args,filename='K3.z1.domain1.png')"
    ]
   },
   {
@@ -342,6 +359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Saving directly as PNG does not result in a very nice image so it is better to save the above image from the menu.\n",
     "#plot_polygon(p,[1,1,1],action='save',ticks=[2,2,2],filename='K3.z1.domain2.pgf',xmin=-3.5,xmax=3.5,ymin=-3.5,ymax=3.5)"
    ]
   },
@@ -419,7 +437,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "The preliminary search gives the cusp $(0:1)$ and using the distance to this for the initianl bound gives the same embeddiing and norm bounds for $\\sigma$ as for $i\\mathbf{1}$ and the total number of cusp candidates will even be smaller (9):"
+   "source": [
+    "The preliminary search gives the cusp $(0:1)$ and using the distance to this for the initianl bound gives the same embeddiing and norm bounds for $\\sigma$ as for $i\\mathbf{1}$ and the total number of cusp candidates will even be smaller (9):"
+   ]
   },
   {
    "cell_type": "code",
@@ -488,7 +508,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 10.0",
+   "display_name": "SageMath 10.5",
    "language": "sage",
    "name": "sagemath"
   },
@@ -502,7 +522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
